--- a/style/about.css
+++ b/style/about.css
@@ -20,9 +20,27 @@ header {
     align-items: center;
 }
 
+.nav-link {
+    padding: 10px 20px;
+    /* background-color: #0f0062; */
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s;
+}
+
+.nav-link :hover {
+    background-color: #ffd700;
+    border-radius: 10px;
+    color: #0f0062;
+}
+
 header nav {
     width: 100%;
     padding: 0px 24px;
+    background-color: rgb(22, 22, 168);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -31,8 +49,8 @@ header nav {
 header nav h4 {
     display: flex;
     align-items: center;
-    gap: 8px;
-    color: rgb(22, 22, 168);
+    color: #ffd700;
+    gap: 12px;
     font-weight: bold;
     font-size: 24px
 }
@@ -52,7 +70,7 @@ header nav div a {
     gap: 4px;
     text-decoration: none;
     /* text-decoration: none; use to delete underline */
-    color: rgb(22, 22, 168);
+    color: rgb(255, 255, 255);
     padding: 20px;
     font-weight: bold;
 }
@@ -76,8 +94,7 @@ header .auth button {
     font-weight: bold;
 }
 .signup {
-    background: rgb(22, 22, 168);
-    color: #fff;
+    color:rgb(22, 22, 168);
     font-weight: bold;
 }
 
